Fix: disable guess for drawer, add permanent skip button, prevent self-guessing

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <input id="input-guess" type="text"
                                 style="flex:1; padding:8px; border-radius:10px; border:2px solid #ddd; font-size:1rem;"
                                 placeholder="Type guess..." onkeydown="if(event.key==='Enter') submitGuess()">
-                            <button onclick="submitGuess()"
+                            <button id="send-guess-btn" onclick="submitGuess()"
                                 style="padding:8px 15px; background:var(--success); color:white; border:none; border-radius:10px; cursor:pointer; font-weight:bold;">SEND</button>
                         </div>
                     </div>
