--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
                 <div class="toggle-option" data-value="HARD" onclick="selectSetting('diff','HARD')">🤯 Hard</div>
             </div>
 
+            <p>Number of Rounds</p>
+            <div class="toggle-group" data-type="rounds">
+                <div class="toggle-option" data-value="3" onclick="selectSetting('rounds','3')">3</div>
+                <div class="toggle-option selected" data-value="5" onclick="selectSetting('rounds','5')">5</div>
+                <div class="toggle-option" data-value="7" onclick="selectSetting('rounds','7')">7</div>
+                <div class="toggle-option" data-value="10" onclick="selectSetting('rounds','10')">10</div>
+            </div>
+
             <div class="btn-group">
                 <button class="btn-big btn-primary" onclick="createGame()">START GAME ▶</button>
             </div>
