Add exit warning popup + drawer skip word button

--- a/index.html
+++ b/index.html
@@ -99,9 +99,11 @@
             <div style="text-align:center; margin:10px 0;">
                 <button id="start-game-btn" class="btn-big btn-primary" onclick="startGame()" style="display:none;">🎮
                     START GAME</button>
-                <button id="next-turn-btn" class="btn-back" onclick="nextTurn()" style="display:none;">⏭️ NEXT
+                <button id="skip-word-btn" class="btn-back" onclick="skipWord()"
+                    style="display:none; background:#ff6b6b;">😵 Can't Draw This!</button>
+                <button id="skip-turn-btn" class="btn-back" onclick="nextTurn()" style="display:none;">⏩ SKIP
                     TURN</button>
-                <button id="new-game-btn" class="btn-big btn-secondary" onclick="newGame())" style="display:none;">🔄
+                <button id="new-game-btn" class="btn-big btn-secondary" onclick="newGame()" style="display:none;">🔄
                     PLAY AGAIN</button>
             </div>
 
