Fix: change placeholder to 'name here' and prevent multiple winners race condition
- Changed name input placeholder from 'Adam...' to 'name here'
- Added Firebase transaction to prevent multiple simultaneous correct guesses
- Only first correct guesser gets points and triggers next turn
- Clear roundWinner flag when starting new turn

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="view-welcome" class="view-card">
             <h1>🎨 Pictionary Party!</h1>
             <p>Welcome! What is your name?</p>
-            <input type="text" id="input-name" class="neat-input" placeholder="Adam..." maxlength="12">
+            <input type="text" id="input-name" class="neat-input" placeholder="name here" maxlength="12">
             <div class="btn-group">
                 <button class="btn-big btn-primary" onclick="submitName()">LET'S GO! 🚀</button>
                 <br>
